--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                             </nav>
                         </div>
                     </div>        
-
                 </div>
             </div>    
             <!--  For mobile devices -->
@@ -133,7 +132,6 @@
                 <i class="bar"></i>
               </div> <!-- mobile-nav-button -->
             </div>
-
             <nav class="mobile mobile-nav">
               <ul>
                 <li><a href="#0">INICIO</a></li>
@@ -158,7 +156,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -172,7 +170,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn1">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -186,7 +184,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn2">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -200,7 +198,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn3">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -216,7 +214,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn4">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -230,7 +228,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn5">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -244,7 +242,7 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom">
+                                <div class="content-details fadeIn-bottom" id="myBtn6">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
@@ -258,12 +256,11 @@
                                     Bulldog -Expopet</h4>
                                     <p>proximo 27 y 28 Noviembre</p>
                                 </div>
-                                <div class="content-details fadeIn-bottom" id="myBtn">
+                                <div class="content-details fadeIn-bottom" id="myBtn7">
                                     <h3 class="content-title">VISTA RÁPIDA</h3>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
@@ -276,18 +273,46 @@
                               <!-- Modal content -->
                               <div class="modal-content">
                                 <span class="close">&times;</span>
-                                <p>Some text in the Modal..</p>
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <img src="img/modal.jpg" class="img-responsive">
+                                        </div>
+                                        <div class="col-sm-6 text-white">
+                                            <h2><strong>Evento</strong></h2>
+                                            <h2>Rey &#38 Reina Bulldog</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget consequat nisi. Fusce vitae lorem sed enim ultrices hendrerit. Sed rutrum pulvinar porta. Vivamus ac varius turpis, nec feugiat enim. Donec vel semper enim, id porttitor augue. Nunc consectetur et nibh nec molestie. Maecenas semper leo quis convallis congue. Fusce urna urna, varius et faucibus non, gravida a magna. Curabitur at turpis mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed pharetra sem rhoncus est placerat convallis. Ut malesuada semper efficitur. Quisque eu nisi sed tellus molestie ullamcorper. Suspendisse sem velit, pharetra ac tristique id, pretium nec odio.</p>
+                                            <p class="text-right"><a href="#">Ver descripción completa</a></p>
+                                            <div class="container-fluid">
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        <span class="input-group-btn">
+                                                            <button class="btn btn-default button-subs btn-modal" type="button"><p class="reduceFont">COMPARTIR</p></button>
+                                                        </span>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <span class="input-group-btn">
+                                                            <button class="btn btn-default button-subs btn-modal" type="button"><p class="reduceFont">COLABORAR</p></button>
+                                                        </span>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <span class="input-group-btn">
+                                                            <button class="btn btn-default button-subs btn-subs" type="button"><p class="reduceFont">ASISTIR</p></button>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                               </div>
-
                             </div>
                         </div>
                     </div>
                 </div>
            </div>
 </div>
-
         </div>
-
         <footer>
             <div class="pc-footer">
                 <div class="email-form-footer">
@@ -417,7 +442,6 @@
                     </div>
                 </div>
             </div>
-
         </footer>
     </body>
 </html>
