--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="pc-device">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <nav class="navbar">
                                 <ul class="list-inline icon">
                                   <li class="icon"><a href="#"><img  class="glyphicon logo" src="img/facebookIcon.svg"></a></li>
@@ -33,7 +33,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <p class="text-right"><a href="#">Inicio/Regsitro</a></p>
                         </div>
                     </div>
@@ -98,14 +98,14 @@
                 </nav>
                 <div class="container backgroundImg-index img-responsive">
                     <div class="row">
-                        <div class="col-lg-12 backgroundImg-col">
+                        <div class="col-md-12 backgroundImg-col">
                             <div class="backgroundImg-text">
                             <h2 class="backgroundImg-text-title">Enterate de los mejores consejos y cuidados que tenemos para el sano crecimiento de tu cachorro</h2>
                             </div>
                         </div>
                     </div>
                     <div class="row section-menu-title-style">
-                        <div class="col-lg-12 section-menu-col">
+                        <div class="col-md-12 section-menu-col">
                             <h5 class="section-menu-title">Novedades de nuestro club</h5>
                             <hr class="section-menu-hr">
                             <nav class="section-menu">
@@ -147,10 +147,10 @@
             <div class="main-section-all">
                 <div class="container">
                     <div class="row main-section">
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -161,10 +161,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -175,10 +175,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -189,10 +189,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -205,10 +205,10 @@
                         </div>
                     </div>
                     <div class="row main-section">
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -219,10 +219,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -233,10 +233,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -247,10 +247,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-3">
                             <div class="card content">
                                 <div class="content-overlay"></div>
-                                <img src="https://loremflickr.com/320/240/dog" class="img-responsive content-image">
+                                <img src="img/blog.jpg" class=" img-size img-responsive content-image">
                                 <div class="text-card ">
                                     <h4>Evento Rey y Reina
                                     Bulldog -Expopet</h4>
@@ -263,12 +263,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <span class="glyphicon glyphicon-chevron-up go-upper go-upper-js"></span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <div id="myModal" class="modal">
                               <!-- Modal content -->
                               <div class="modal-content">
@@ -318,33 +318,33 @@
                 <div class="email-form-footer">
                     <div class="container">
                         <div class="row form-subscribe">
-                          <div class="col-lg-4">
+                          <div class="col-md-4">
                             <div class="input-group button-subs">
                               <input type="text" class="form-control input-subs" placeholder="Nombre">
                             </div><!-- /input-group -->
-                        </div><!-- /.col-lg-6 -->
-                        <div class="col-lg-4">
+                        </div><!-- /.col-md-6 -->
+                        <div class="col-md-4">
                             <div class="input-group button-subs">
                               <input type="email" class="form-control input-subs" placeholder="Email">
                             </div><!-- /input-group -->
-                          </div><!-- /.col-lg-6 -->
-                        <div class="col-lg-4">
+                          </div><!-- /.col-md-6 -->
+                        <div class="col-md-4">
                             <div class="input-group">
                               <span class="input-group-btn">
                                 <button class="btn btn-default button-subs btn-subs" type="button">SUSCRIBIRME</button>
                               </span>
                             </div><!-- /input-group -->
-                          </div><!-- /.col-lg-6 -->
+                          </div><!-- /.col-md-6 -->
                         </div><!-- /.row -->
                     </div>
                 </div>
                 <div class="footer2">
                     <div class="container-fluid">
                         <div class="row footer2-row">
-                            <div class="col-lg-3">
+                            <div class="col-md-3">
                                 <img src="img/logo.png" class="img-responsive text-left brandLogoimg brandLogoimg-mobile">
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-md-3">
                                 <div class="navigation">
                                     <h5>NAVEGACIÓN</h5>
                                     <hr style="margin-top:0; margin-bottom: 10px;">
@@ -377,7 +377,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-md-3">
                                 <div class="navigation">
                                     <h5 style="color: #012E45;">NAVEGACIÓN</h5>
                                     <hr style="margin-top:0; margin-bottom: 10px;">
@@ -402,7 +402,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-md-3">
                                 <div class="navigation">
                                     <h5>CONTÁCTENOS</h5>
                                     <hr style="margin-top:0; margin-bottom: 10px;">
