--- a/index.html
+++ b/index.html
@@ -272,8 +272,12 @@
                             <div id="myModal" class="modal">
                               <!-- Modal content -->
                               <div class="modal-content">
-                                <span class="close">&times;</span>
                                 <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <span class="close">&times;</span>
+                                        </div>
+                                    </div>
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <img src="img/modal.jpg" class="img-responsive">
